修复zui缺少templates错误

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,5 @@ include README.md  setup.py
 recursive-include scaffold_toolkit\static *
 recursive-include scaffold_toolkit\formvalidator\static *
 recursive-include scaffold_toolkit\zui\static *
+recursive-include scaffold_toolkit\zui\templates *
 
