修复kindeditor上传时，处理url错误

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,4 +4,5 @@ recursive-include scaffold_toolkit\static *
 recursive-include scaffold_toolkit\formvalidator\static *
 recursive-include scaffold_toolkit\zui\static *
 recursive-include scaffold_toolkit\zui\templates *
+recursive-include scaffold_toolkit\templates *
 
